# gemini-manager

./: CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  backblaze_b2_integration.md  gemini_stats.py  gemini_status.py  pyproject.toml  rebrand.py
codex_manager/: .gitignore  CHANGELOG.md  CODEX_MANAGER_SPEC.md  README.md  ROADMAP.md  codex_status.py  pyproject.toml
codex_manager/src/codex_manager/: __init__.py  account_status.py  args.py  backup.py  cli.py  cloud.py  config.py  cooldown.py  credentials.py  doctor.py  list_backups.py  profile.py  prune.py  prune_backups.py  purge.py  recommend.py  registry.py  remove.py  restore.py  status.py  sync.py  ui.py  use_account.py  utils.py
codex_manager/tests/: conftest.py  test_account_status_coverage.py  test_account_status_more2.py  test_args_cli.py  test_args_cli_3.py  test_args_cli_extra.py  test_backup.py  test_backup2.py  test_backup_ux.py  test_cli2.py  test_cli_coverage.py  test_cli_coverage_2.py  test_cli_coverage_3.py  test_cli_coverage_4.py  test_cli_coverage_5.py  test_cli_coverage_6.py  test_cli_coverage_7.py  test_cli_coverage_8.py  test_cli_coverage_extra.py  test_cli_coverage_more.py  test_cloud.py  test_config.py  test_cooldown.py  test_cooldown2.py  test_credentials2.py  test_doctor.py  test_doctor2.py  test_dry_run_coverage.py  test_list_backups.py  test_list_backups2.py  test_list_backups3.py  test_list_backups_coverage.py  test_next_gen_upgrade.py  test_profile.py  test_prune.py  test_prune_backups.py  test_prune_backups2.py  test_purge.py  test_recommend.py  test_recommend2.py  (+14 more)
tests/: conftest.py  test_auto_restore.py  test_b2.py  test_backup.py  test_banner.py  test_chat.py  test_check_b2.py  test_cleanup.py  test_cli.py  test_cloud_s3.py  test_commands.py  test_cooldown.py  test_cooldown_integration.py  test_credentials.py  test_deep_coverage.py  test_doctor.py  test_encrypted_backup.py  test_history.py  test_integrity.py  test_lean_storage.py  test_list_backups.py  test_logout.py  test_metadata.py  test_metadata_cloud.py  test_profile.py  test_project_config.py  test_prune.py  test_prune_backups.py  test_recommend.py  test_registry_sync.py  test_reset_helpers.py  test_restore.py  test_session.py  test_settings.py  test_settings_cli.py  test_stats.py  test_status.py  test_sync.py  test_ui.py  (+3 more)
(+41 files in other folders)
